--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-hello world
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Default Homepage</title>
+    </head>
+    <body>
+        <p>Welcome</p>
+    </body>
+</html>
