--- a/index.html
+++ b/index.html
@@ -1,9 +1,132 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Default Homepage</title>
+        <title>CSCI225 Homepage of Andrew Bishop</title>
+        <h1>CSCI225 Homepage of Andrew Bishop</h1>
     </head>
     <body>
-        <p>Welcome</p>
+        <div class="Navbar">
+            <ul>
+                <li><a href="https://www.usca.edu/">USCA main page</a></li>
+                <li><a href="#assignment">go to assignment section</a></li>
+                <li><a href="#contact">go to contact info</a></li>
+                <li><a href="#schedule">go to schedule section</a></li>
+                <li><a href="http://www.facebook.com">Facebook</a></li>
+            </ul>
+        </div>
+        <div class="introduction">
+            <h1>Introduction</h1>
+            <p>My name is Andrew Bishop I am 19 and I attend USCA. I am majoring in cyber security here. I really like pizza. I really like Elden Ring.</p>
+            <img src="img/WGI_0068 (2).JPG" alt="Me">
+        </div>
+        <div class="assignment">
+            <h1 id="assignment">Assignment</h1>
+            <ol>
+                <li><a href="doc/Assignment1.pdf" target="_blank">Open assignment 1</a></li>
+                <li>Assignment 2</li>
+                <li> Assignment 3</li>
+            </ol>
+        </div>
+        <div class="Portfolio">
+            <h1>Portfolio</h1>
+            <ol>
+                <li>project</li>
+                <ul>
+                    <li>This needed much techinical skill and such.</li>
+                </ul>
+                <li>project</li>
+                <ul>
+                    <li>This also needed much techinical skill and such.</li>
+                </ul>
+                <li>project</li>
+                <ul>
+                    <li>This other one needed much techinical skill and such.</li>
+                </ul>
+            </ol>
+            <p id="contact">Contact Information</p>
+            <a href="mailto:adbishop@usca.edu">My email</a>
+        </div>
+        <div class="schedule">
+            <h1 id="schedule"> Schedule</h1>
+            <table border="1">
+                <tr>
+                    <th></th>
+                    <th>Monday</th>
+                    <th>Tuesday</th>
+                    <th>Wednesday</th>
+                    <th>Thursday</th>
+                    <th>Friday</th>
+                </tr>
+                <tr>
+                    <td>9:00-10:00</td>
+                    <td>BMIF 315 Methodlogical foundations of biometrichal informations LH-TBD</td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td>BMIF Methodlogical foundations of biometrichal informations LH-TBD</td>
+                </tr>
+                <tr>
+                    <td>10:00-11:00</td>
+                    <td> </td>
+                    <td> </td>
+                    <td rowspan="2">BMIF Methodlogical foundations of biometrichal informations LH-TBD </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+                <tr>
+                    <td>11:00-12:00 </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+                <tr>
+                    <td>12:00-1:00 </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+                <tr>
+                    <td>1:00-2:00</td>
+                    <td>BMIF 316b Scientific communication EBL-456</td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+                <tr>
+                    <td>2:00-3:00</td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+                <tr>
+                    <td>3:00-4:00</td>                    
+                    <td rowspan="3"> BMIF 320 Healthcare organization and managment EBL-456</td>
+                    <td>BMIF 380 Data privacy in medicine feathering hall-313 2:35-3:50</td>
+                    <td> </td>
+                    <td>BMIF 380 Data privacy in medicine feathering hall-313 2:35-3:50</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>4:00-5:00</td>
+                    <td>BMIF 330 Machine Learning for Biomediceine LH-TBD 4:00-5:15</td>
+                    <td></td>
+                    <td>BMIF 330 Machine Learning for Biomediceine LH-TBD 4:00-5:15</td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>5:00-6:00</td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                    <td> </td>
+                </tr>
+            </table>&copy;copyright of Andrew Bishop 2023-2024
+        </div>
     </body>
 </html>
