--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="assignment">
             <h1 id="assignment">Assignment</h1>
             <ol>
-                <li><a href="doc/Assignment1.pdf" target="_blank">Open assignment 1</a></li>
+                <li><a href="doc/Assignment 1 gov.pdf" target="_blank">Open assignment 1</a></li>
                 <li>Assignment 2</li>
                 <li> Assignment 3</li>
             </ol>
@@ -126,7 +126,8 @@
                     <td> </td>
                     <td> </td>
                 </tr>
-            </table>&copy;copyright of Andrew Bishop 2023-2024
+            </table>
+            <footer>&copy;copyright of Andrew Bishop 2023-2024</footer>
         </div>
     </body>
 </html>
