--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </ul>
         </div>
         <div class="introduction">
-            <h1>Introduction</h1>
+            <h1 bold>Introduction</h1>
             <p>My name is Andrew Bishop I am 19 and I attend USCA. I am majoring in cyber security here. I really like pizza. I really like Elden Ring.</p>
             <img src="img/WGI_0068 (2).JPG" alt="Me">
         </div>
@@ -23,7 +23,7 @@
             <h1 id="assignment">Assignment</h1>
             <ol>
                 <li><a href="doc/Assignment 1 gov.pdf" target="_blank">Open assignment 1</a></li>
-                <li>Assignment 2</li>
+                <li><a href="ContactMe.html" target="_blank">Open assignment 2</a></li>
                 <li> Assignment 3</li>
             </ol>
         </div>
