--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <div class="Navbar">
         <ul id="Navbar">
             <li><a href="https://www.usca.edu/">USCA main page</a></li>
-            <li><a href="#assignment">go to assignment section</a></li>
-            <li><a href="#contact">go to contact info</a></li>
-            <li><a href="#schedule">go to schedule section</a></li>
             <li><a href="http://www.facebook.com">Facebook</a></li>
+            <li><a href="conversion.html">conversion sheet</a></li>
+            <li><a href="ContactMe.html">contact me</a></li>
         </ul>
     </div>
     <div class="introduction">
