--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <li><a href="http://www.facebook.com">Facebook</a></li>
             <li><a href="conversion.html">conversion sheet</a></li>
             <li><a href="ContactMe.html">contact me</a></li>
+            <li><a href="imageGallery.html">Image Gallery</a></li>
         </ul>
     </div>
     <div class="introduction">
